Add selectable natures for the character creation with the option to enter something yourself